Implementacion de Entidades

--- a/CasaEscuela.EN/CasaEscuela.EN.csproj
+++ b/CasaEscuela.EN/CasaEscuela.EN.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\CasaEscuela.BL.DTOs\CasaEscuela.BL.DTOs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
