--- a/CasaEscuela.EN/CasaEscuela.EN.csproj
+++ b/CasaEscuela.EN/CasaEscuela.EN.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CasaEscuela.BL.DTOs\CasaEscuela.BL.DTOs.csproj" />
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <ProjectReference Include="..\CasaEscuela.BL.DTOs\CasaEscuela.BL.DTOs.csproj" />
   </ItemGroup>
 
 </Project>
