Codigo en general para la capa BL y clases faltantes

--- a/CasaEscuela.AppWebMVC/CasaEscuela.AppWebMVC.csproj
+++ b/CasaEscuela.AppWebMVC/CasaEscuela.AppWebMVC.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Estudiantes\" />
     <Folder Include="wwwroot\Rotativa\" />
   </ItemGroup>
 
