--- a/CasaEscuela.AppWebMVC/appsettings.json
+++ b/CasaEscuela.AppWebMVC/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Conn": "Server=127.0.0.1;Port=3306;Database=casaescueladb;Uid=root;Pwd=luna1111;"
+    "Conn": "Server=127.0.0.1;Port=3306;Database=casaescuela;Uid=root;Pwd=Emilypeverell_2004;"
   },
   "AllowedHosts": "*"
 }
