--- a/CasaEscuela.BL.DTOs/CasaEscuela.BL.DTOs.csproj
+++ b/CasaEscuela.BL.DTOs/CasaEscuela.BL.DTOs.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
